1.18.2 Compiles & launches. Nuke Terrablender dependency(for now)